p2/confs/service_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
