p2/confs/service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
