p2/confs/service_3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
